[package]
name = "icx-nns"
version = "0.1.0"
authors = ["DFINITY Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
candid = { version = "0.6.20", features = [ "random" ] }
chrono = "0.4.9"
clap = "3.0.0-beta.2"
hex = {version = "0.4.2", features = ["serde"] }
humanize-rs = "0.1.5"
garcon = { version = "0.2", features = ["async"] }
num-traits = "0.2"
num-derive = "0.3"
openssl = "0.10.32"
ring = "0.16.11"
serde = { version = "1.0.101", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.57"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0.20"
tokio = { version = "1.2.0", features = [ "fs" ] }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
rust_decimal = "1.10.3"

[dependencies.ic-agent]
version = "0.5.0"
path = "/Users/prithvishahi/dev/agent-rs/ic-agent"
features = ["reqwest"]

[dependencies.ic-identity-hsm]
version = "0.3.1"
path = "/Users/prithvishahi/dev/agent-rs/ic-identity-hsm"

[dependencies.ic-types]
version = "0.1.3"
path = "/Users/prithvishahi/dev/agent-rs/ic-types"

[dependencies.ic-utils]
version = "0.3.1"
path = "/Users/prithvishahi/dev/agent-rs/ic-utils"

[patch.crates-io.ic-agent]
version = "0.5.0"
path = "/Users/prithvishahi/dev/agent-rs/ic-agent"
features = ["reqwest"]

[patch.crates-io.ic-identity-hsm]
version = "0.3.1"
path = "/Users/prithvishahi/dev/agent-rs/ic-identity-hsm"

[patch.crates-io.ic-types]
version = "0.1.3"
path = "/Users/prithvishahi/dev/agent-rs/ic-types"

[patch.crates-io.ic-utils]
version = "0.3.1"
path = "/Users/prithvishahi/dev/agent-rs/ic-utils"
