[package]
name = "icx-nns"
version = "0.1.0"
authors = ["DFINITY Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
candid = { version = "0.6.20", features = [ "random" ] }
clap = "3.0.0-beta.2"
humanize-rs = "0.1.5"
garcon = { version = "0.2", features = ["async"] }
openssl = "0.10.48"
serde = { version = "1.0.101", features = ["derive"] }
tokio = { version = "1.2.0", features = [ "fs" ] }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "779549eccfcf61ac702dfc2ee6d76ffdc2db1f7f" }
rust_decimal = "1.10.3"

[dependencies.ic-agent]
version = "0.5.0"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"
features = ["reqwest"]

[dependencies.ic-identity-hsm]
version = "0.3.1"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"

[dependencies.ic-types]
version = "0.1.3"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"

[dependencies.ic-utils]
version = "0.3.1"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"

[patch.crates-io.ic-agent]
version = "0.5.0"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"
features = ["reqwest"]

[patch.crates-io.ic-identity-hsm]
version = "0.3.1"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"

[patch.crates-io.ic-types]
version = "0.1.3"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"

[patch.crates-io.ic-utils]
version = "0.3.1"
git = "https://github.com/dfinity/agent-rs.git"
rev = "01aa26cc6e481d6bda1a4402741e8eaaf7be3c66"
